--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.20.2",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
+    "standard": "^14.3.4",
     "supertest": "^4.0.2"
   }
 }
